examples/test/testpolicy15064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15064
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key25: value29
      key40: value31
      key6: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value3
          key32: value14
          key40: value38
      podSelector:
        matchLabels:
          key40: value47
          key0: value3
